--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
+
     <link rel="stylesheet" href="./assets/css/style.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -21,37 +21,95 @@
     />
 
     <title>Frontend Mentor | Clipboard landing page</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   </head>
   <body>
-    A history of everything you copy Clipboard allows you to track and organize
-    everything you copy. Instantly access your clipboard on all your devices.
-    Download for iOS Download for Mac Keep track of your snippets Clipboard
-    instantly stores any item you copy in the cloud, meaning you can access your
-    snippets immediately on all your devices. Our Mac and iOS apps will help you
-    organize everything. Quick Search Easily search your snippets by content,
-    category, web address, application, and more. iCloud Sync Instantly saves
-    and syncs snippets across all your devices. Complete History Retrieve any
-    snippets from the first moment you started using the app. Access Clipboard
-    anywhere Whether you’re on the go, or at your computer, you can access all
-    your Clipboard snippets in a few simple clicks. Supercharge your workflow
-    We’ve got the tools to boost your productivity. Create blacklists Ensure
-    sensitive information never makes its way to your clipboard by excluding
-    certain sources. Plain text snippets Remove unwanted formatting from copied
-    text for a consistent look. Sneak preview Quick preview of all snippets on
-    your Clipboard for easy access. Clipboard for iOS and Mac OS Available for
-    free on the App Store. Download for Mac or iOS, sync with iCloud and you’re
-    ready to start adding to your clipboard. Download for iOS Download for Mac
-    FAQs Contact Us Privacy Policy Press Kit Install Guide
+    <main>
+      <div class="container">
+        <div class="download">
+          <div class="logo">
+            <img src="/assets/images/logo.svg" alt="logo" />
+          </div>
+          <div class="title">
+            <h1>A history of everything you copy</h1>
+          </div>
+          <div class="text">
+            Clipboard allows you to track and organize everything you copy.
+            Instantly access your clipboard on all your devices.
+          </div>
+          <div class="buttons">
+            <div class="button-ios"><button>Download for iOS</button></div>
+            <div class="button-mac"><button>Download for Mac</button></div>
+          </div>
+        </div>
 
+        <div class="snippets">
+          <div class="title">
+            <h2>Keep track of your snippets</h2>
+          </div>
+          <div class="text">
+            Clipboard instantly stores any item you copy in the cloud, meaning
+            you can access your snippets immediately on all your devices. Our
+            Mac and iOS apps will help you organize everything.
+          </div>
+          <div class="snippets-body">
+            <div class="snippets-body-image">
+              <img
+                src="/assets/images/image-computer.png"
+                alt="image computer"
+              />
+            </div>
+            <div class="snippets-body-highlights">
+              <div class="quickSearch">
+                <div class="subtitle"><h3>Quick Search</h3></div>
+                <div class="text">
+                  Easily search your snippets by content, category, web address,
+                  application, and more.
+                </div>
+              </div>
+              <div class="iclouSync">
+                <div class="subtitle"><h3>iCloud Sync</h3></div>
+                <div class="text">
+                  Instantly saves and syncs snippets across all your devices.
+                </div>
+              </div>
+              <div class="completHistory">
+                <div class="subtitle"><h3>Complete History</h3></div>
+                <div class="text">
+                  Retrieve any snippets from the first moment you started using
+                  the app.
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="access">
+          <div class="title">
+            <h2>Keep track of your snippets</h2>
+          </div>
+          <div class="text">
+            Clipboard instantly stores any item you copy in the cloud, meaning
+            you can access your snippets immediately on all your devices. Our
+            Mac and iOS apps will help you organize everything.
+          </div>
+          <div class="access-image">
+            <img src="/assets/images/image-devices.png" alt="image devices" />
+          </div>
+        </div>
+      </div>
+    </main>
     <footer>
-      <p class="attribution">
+      <!-- <p class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Geovanni de França</a>.
-      </p>
+        >. Coded by
+        <a
+          href="https://www.linkedin.com/in/geovanni-de-fran%C3%A7a-silva-5460931b4/"
+          target="_blank"
+          >Geovanni de França</a
+        >.
+      </p> -->
     </footer>
   </body>
 </html>
