--- a/index.html
+++ b/index.html
@@ -156,35 +156,51 @@
               </div>
             </div>
           </div>
-
-          <div class="download-2">
-            <div class="title">
-              <h2>Clipboard for iOS and Mac OS</h2>
-            </div>
-            <div class="text">
-              Available for free on the App Store. Download for Mac or iOS, sync
-              with iCloud and you’re ready to start adding to your clipboard.
-            </div>
-            <div class="buttons">
-              <div class="button-ios"><button>Download for iOS</button></div>
-              <div class="button-mac"><button>Download for Mac</button></div>
-            </div>
+        </div>
+        <div class="download-2">
+          <div class="title">
+            <h2>Clipboard for iOS and Mac OS</h2>
+          </div>
+          <div class="text">
+            Available for free on the App Store. Download for Mac or iOS, sync
+            with iCloud and you’re ready to start adding to your clipboard.
+          </div>
+          <div class="buttons">
+            <div class="button-ios"><button>Download for iOS</button></div>
+            <div class="button-mac"><button>Download for Mac</button></div>
           </div>
         </div>
       </div>
     </main>
     <footer>
-      <!-- <p class="attribution">
-        Challenge by
+      <div class="footer-container">
+        <div class="footer-logo">
+          <img src="./assets/images/logo.svg" alt="logo" />
+        </div>
+        <div class="footer-contacts">
+          <div>FAQs</div>
+          <div>Privacy Policy</div>
+          <div>Install Guide</div>
+          <div>Contac tUs</div>
+          <div>Press Kit</div>
+        </div>
+        <div class="footer-socialNetworks">
+          <img src="./assets/images/icon-facebook.svg" alt="facebook" />
+          <img src="./assets/images/icon-twitter.svg" alt="twitter" />
+          <img src="./assets/images/icon-instagram.svg" alt="instagram" />
+        </div>
+      </div>
+      <div class="attribution">
+        <span>Challenge by</span>
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          >Frontend Mentor</a
+          >Frontend Mentor </a
         >. Coded by
         <a
           href="https://www.linkedin.com/in/geovanni-de-fran%C3%A7a-silva-5460931b4/"
           target="_blank"
           >Geovanni de França</a
         >.
-      </p> -->
+      </div>
     </footer>
   </body>
 </html>
